methods.basics.Methods.scala.error
Compilation error:
Methods:3: error: ';' expected but ',' found.
  while (! isOverBaggle()) {forward(), steps = steps + 1}
                                     ^